--- a/DataFlow/Web.config
+++ b/DataFlow/Web.config
@@ -41,13 +41,17 @@
         <add tagPrefix="dx" namespace="DevExpress.Web" assembly="DevExpress.Web.v14.2, Version=14.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add tagPrefix="uControl" src ="/App_Control/DataGird.ascx" tagName="DataGird" />
       </controls>
+      <namespaces>        
+        <add namespace="CMS.CMSHelper" />
+        <add namespace="CMS.GlobalHelper" />
+      </namespaces>
     </pages>
   </system.web>
 
   <connectionStrings>
     <clear/>
     <add name="CMSConnectionString"
-      connectionString="Persist Security Info=False;database=Final.vApp.Local;server=.\SQL2017E;user id=vApp;password=123$Abc@!;Current Language=English;Connection Timeout=720"
+      connectionString="Persist Security Info=False;database=Final.vApp.Local;server=.\SQL2017E;user id=sa;password=123$Abc@!;Current Language=English;Connection Timeout=720"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
